# tube-scout

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
_workspace/: audit_layer1_static.md  audit_layer2_contracts.md  audit_layer3_integration.md  audit_layer4_e2e.md  audit_layer5_consistency.md  audit_layer6_adversary.md  audit_layer7_security.md  audit_remediation_plan.md  audit_summary.md  final_pair-programmer_review.md  phase3_pair-programmer_review.md  phase3_qa-engineer_verification.md  phase4_adversary_attack_report.md  phase5-6_pair-programmer_review.md  phase5_pair-programmer_review.md  phase7-8_pair-programmer_review.md  phase9_pair-programmer_review.md  tasks.md
docs/: 008-admin-web-ui-deployment.md  for-new-teachers.md  index.md  quickstart.md  tutorial.md
docs/incidents/: 2026-05-17-asr-ingest-inconsistency.md  2026-05-17-audit-v3-followups.md  2026-05-17-handoff-to-next-session.md
docs/use-cases/: 01-duplication-detection.md  02-cqi-support.md  03-caption-extraction.md
idea/: idea-2026-05-09-roadmap.md  idea-2026-05-09-spec-X1-ytdlp-adapter.md  idea-2026-05-12-takeout-knowledge-base.md  idea-concept.md  idea-spec014-ui-3menu.md  idea-spec016-takeout-archive-survey.md  idea-spec016-takeout-ingest-defects.md  idea-spec017-takeout-unified-ingest.md  idea-spec018-unified-ingest-persistence-and-idempotency.md  idea.md  idea2.md  idea3.1.md  idea3.2.md  idea3.md  idea4.md  idea5-admin-web-ui.md  idea6-tube-scout-consistency-fix.md  idea7-runtime-integration-fix.md  idea_audit.md
nix/: module.nix
specs/001-lecture-video-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-v2-analytics-expansion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multichannel-admin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-report-filter-pdf-bundle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-oauth-ratelimit-gpu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-report-filter-pdf-bundle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-content-reuse-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-admin-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-runtime-auth-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-prefer-captions-resume/: plan.md  spec.md  tasks.md
specs/011-reuse-fullstack-subtitle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-ytdlp-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-takeout-local-asr-reuse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-takeout-ingest-rebuild/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-takeout-unified-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-ingest-persist-idempotent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/adversary/: test_006_adversary.py  test_analytics_failures.py  test_auth_failures.py  test_bundle_cli_adversary.py  test_content_adversary.py  test_cross_phase_attack.py  test_failure_cases.py  test_feature004_final_adversary.py  test_filter_pdf_adversary.py  test_global_audit_combinations.py  test_global_audit_env_conditions.py  test_global_audit_user_personas.py  test_llm_failures.py  test_multichannel_adversary.py  test_pipeline_edge.py  test_rate_limit_edge.py  test_report_video_adversary.py  test_reporting_failures.py  test_reuse_v2_adversary.py  test_spec009_phase4to7.py  test_takeout_cli_adversary.py  test_title_edge_cases.py  test_transcripts_resume.py  test_us1_attack_surface.py  test_us3_no_ytdlp_grep.py  test_v2_adversary.py  test_validation_edge_cases.py
tests/contract/: test_admin_add_department_contract.py  test_admin_list_contract.py  test_asr_contract.py  test_audio_extract_contract.py  test_audit_writer_v2_contract.py  test_auth_device_flow.py  test_auth_migration.py  test_auth_routes.py  test_cli_content_v2_contract.py  test_collect_channel_symmetry.py  test_collect_ingest_contract.py  test_collect_ingest_force_contract.py  test_collect_takeout_contract.py  test_collect_transcripts_010.py  test_db_schema_v2_contract.py  test_devshell_asr_import.py  test_evidence_score_contract.py  test_files_routes.py  test_history_routes.py  test_idempotency_guard_contract.py  test_jobs_form_routes.py  test_kb_export_contract.py  test_nc2_matcher_contract.py  test_professor_report_contract.py  test_progress_reporter_contract.py  test_progress_routes.py  test_resolve_project.py  test_results_route.py  test_retry_manifest_contract.py  test_retry_routes.py  test_reviews_routes.py  test_service_layer_contract.py  test_source_video_cleanup_contract.py  test_takeout_ingest_contract.py  test_takeout_ingest_rejects_empty_csv_channel_id.py  test_takeout_ingest_rejects_external_symlink.py  test_takeout_ingest_uses_unified_registry.py  test_text_normalizer_contract.py  test_transcript_artifact_contract.py  test_v4_migration_contract.py  (+2 more)
tests/fixtures/: httpx_mock.py  korean_sentiment_samples.json  reference_segmentation.json  sample_titles.json  search_clips_sample.yaml  v0_5_0_schema_snapshot.sql  v3_db_fixture.py
tests/integration/: test_admin_add_department.py  test_admin_dropdown_refresh.py  test_admin_flow.py  test_admin_list.py  test_admin_refresh.py  test_admin_status.py  test_admin_status_log_channel.py  test_admin_verify.py  test_advisory_lock_concurrent.py  test_analytics_collect.py  test_analyze_nc2_cli.py  test_app_boot.py  test_asr_hallucination_baseline.py  test_asr_single_source.py  test_asr_throughput.py  test_asr_with_cached_model.py  test_audio_fingerprint_flow.py  test_audio_fp_hamming_distribution.py  test_audio_temp_cleanup.py  (+91 more)
(+390 files in other folders)
