[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tube-scout"
version = "0.3.0"
description = "YouTube lecture video analytics CLI tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "youtube-transcript-api>=0.6.0",
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "nbformat>=5.9.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "python-Levenshtein>=0.25.0",
    "weasyprint>=62.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
tube-scout = "tube_scout.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tube_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
norecursedirs = ["tests/manual"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Spec-009 UserFacingError subclasses use descriptive names defined in the
# spec contract (e.g., DeviceCodeTimeout, MultipleAliasesNoSelection) that
# intentionally do NOT carry an "Error" suffix; the contract is referenced
# across tests/docs and renaming would break the public API.
"src/tube_scout/cli/errors.py" = ["N818"]
"src/tube_scout/cli/auth_cli.py" = ["N818"]
# Pre-existing service-layer exceptions (ScopeReauthRequired,
# InteractiveAuthRequired) predate the N818 rule; their public name is part
# of the runtime contract.
"src/tube_scout/services/auth.py" = ["N818"]
# Test files routinely embed long fixture strings (URLs, error messages,
# JSON literals); the 88-char line cap fights readability there. Test
# mock classes also mirror upstream library exception names verbatim
# (TranscriptsDisabled, NoTranscriptFound from youtube-transcript-api),
# so renaming for N818 would defeat the mock.
"tests/**/*.py" = ["E501", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["tube_scout"]

# Google OAuth/API libraries do not ship `py.typed` markers or PEP 561
# stubs. Suppress import-untyped + untyped-call noise so spec-009's typed
# auth modules can call them under `mypy --strict` without scattered
# per-line ignores. Re-evaluate when google-auth ships stubs upstream.
[[tool.mypy.overrides]]
module = [
    "google.auth.transport.requests",
    "google.oauth2.credentials",
    "google_auth_httplib2",
    "google_auth_oauthlib.flow",
    "googleapiclient.discovery",
    "httplib2",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.0",
    "vulture>=2.16",
]
