[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tube-scout"
version = "0.3.3"
description = "YouTube lecture video analytics CLI tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

# ─── Core runtime dependencies ───
# Lean baseline that every CLI subcommand can rely on. Heavy ML/PDF
# stacks live in optional-extras (see [project.optional-dependencies])
# so a default `uv sync` stays under ~1 GB and pytest collection does
# not OOM 13 GB dev hosts. All heavy imports in src/ are function-local
# (lazy) so the absence of an extra surfaces as a clear ImportError at
# call time, not at module load.
dependencies = [
    # CLI + presentation
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "python-Levenshtein>=0.25.0",
    "httpx>=0.27.0",
    # Google + YouTube data sources
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "youtube-transcript-api>=0.6.0",
    # Tabular + plotting (mid-weight, used broadly across collect/report)
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "nbformat>=5.9.0",
    # Media download + audio fingerprinting (spec 012)
    "yt-dlp>=2026.03.17",
    "pyacoustid>=1.3.0",
    # LLM API clients (lightweight HTTP wrappers)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Web admin UI
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# `pip install tube-scout[ml-sentiment]` — local KoBERT/KoELECTRA pipeline.
# Heavy: transformers + torch wheels are ~1 GB on disk and load ~600 MB into
# RAM on import. Required ONLY when SentimentService(backend="local").
ml-sentiment = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
]
# `pip install tube-scout[ml-forecast]` — ARIMA + Prophet time-series models.
# Heavy: prophet bundles cmdstanpy/Stan compilation; statsmodels ~150 MB.
# Required ONLY when ForecasterService.predict(model="arima"|"prophet").
ml-forecast = [
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
]
# Aggregate ML extras.
ml = [
    "tube-scout[ml-sentiment,ml-forecast]",
]
# `pip install tube-scout[pdf]` — WeasyPrint HTML→PDF rendering. Pulls
# native cairo/pango on first run; required ONLY by report bundle PDF
# emission paths (department_report.py / bundle_report.py).
pdf = [
    "weasyprint>=62.0",
]
# Everything-and-the-kitchen-sink.
all = [
    "tube-scout[ml,pdf]",
]
# Test + lint toolchain.
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
tube-scout = "tube_scout.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tube_scout"]

[tool.pytest.ini_options]
# Full default suite — unit + integration + contract + adversary —
# peaks ~280 MB on 13 GB-RAM dev hosts. Adversary used to spike to
# 6.6 GB and trigger kernel OOM, but the root cause was a single
# unbounded `Path.read_bytes()` on a `/dev/zero` symlink in
# auth_migration._process_legacy_path; with the stat-and-cap fix in
# place the suite is bounded and adversary is included by default.
# tests/conftest.py still applies a 10 GiB RLIMIT_AS cap as
# defense-in-depth so any future unbounded-read regression surfaces
# as MemoryError instead of an OOM-kill of the interactive session.
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
norecursedirs = ["tests/manual"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Spec-009 UserFacingError subclasses use descriptive names defined in the
# spec contract (e.g., DeviceCodeTimeout, MultipleAliasesNoSelection) that
# intentionally do NOT carry an "Error" suffix; the contract is referenced
# across tests/docs and renaming would break the public API.
"src/tube_scout/cli/errors.py" = ["N818"]
"src/tube_scout/cli/auth_cli.py" = ["N818"]
# Pre-existing service-layer exceptions (ScopeReauthRequired,
# InteractiveAuthRequired) predate the N818 rule; their public name is part
# of the runtime contract.
"src/tube_scout/services/auth.py" = ["N818"]
# Test files routinely embed long fixture strings (URLs, error messages,
# JSON literals); the 88-char line cap fights readability there. Test
# mock classes also mirror upstream library exception names verbatim
# (TranscriptsDisabled, NoTranscriptFound from youtube-transcript-api),
# so renaming for N818 would defeat the mock.
"tests/**/*.py" = ["E501", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["tube_scout"]

# Google OAuth/API libraries do not ship `py.typed` markers or PEP 561
# stubs. Suppress import-untyped + untyped-call noise so spec-009's typed
# auth modules can call them under `mypy --strict` without scattered
# per-line ignores. Re-evaluate when google-auth ships stubs upstream.
[[tool.mypy.overrides]]
module = [
    "google.auth.transport.requests",
    "google.oauth2.credentials",
    "google_auth_httplib2",
    "google_auth_oauthlib.flow",
    "googleapiclient.discovery",
    "httplib2",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.0",
    "vulture>=2.16",
]
